--- a/styles.css
+++ b/styles.css
@@ -143,63 +143,67 @@ article.article-data {
 /* News */
 
 #section-news {
-  margin: 10px;
-  padding: 15px;
   background-color: navy;
+  margin: 10px;
+  padding: 10px;
 }
 
 .section-news-title {
-  background-color: #eee;
+  background-color: white;
   padding: 10px;
   text-align: center;
-  width: 70%;
-  margin: 0 auto;
-}
-
-.section-news-title h1 {
   color: navy;
   text-shadow: 1px 1px #444;
 }
 
-#section-news article.article {
+#section-news article {
+  min-height: 200px;
   background-color: #444;
+  padding: 10px;
   border-bottom: 5px solid #eee;
-  padding: 5px;
   text-align: center;
-  width: 70%;
-  margin: 0 auto;
 }
 
-#section-news article.article img[id*="article-img-"] {
-  display: block;
-  margin: 5px auto;
+#header-img {
+  margin: 10px auto;
+  max-width: 60%;
   width: 60%;
-  text-align: start;
 }
 
-#section-news article.article h2 {
+#header-description a {
   color: white;
-  display: block;
-  margin: 5px 0;
+  font-size: 20px;
+  margin: 10px;
+  text-decoration: none;
 }
 
-#section-news article.article p {
-  color: #eee;
-  display: block;
+#section-news img[id*="article-img"] {
+  max-width: 50%;
+  width: 50%;
   margin: 5px;
 }
 
-#section-news article.article p#header-description {
-  color: #eee;
-  display: block;
-  margin: 10px 5px;
+#section-news .article-small a {
+  color: white;
+  text-decoration: none;
   font-size: 18px;
 }
-#section-news article.article img#header-img {
-  display: block;
-  margin: 5px auto;
-  width: 80%;
-  text-align: start;
+
+#section-news .article-small a:hover,
+#header-description a:hover {
+  color: navy;
+  text-decoration: underline;
+}
+
+#section-news .article-small a:active,
+#header-description a:active {
+  color: mediumslateblue;
+  text-decoration: underline;
+}
+
+#section-news p[id*="article-"] {
+  color: #eee;
+  font-size: 16px;
 }
 
 /* Footer */
@@ -296,70 +300,44 @@ header a:focus {
 
   /* News (Large) */
 
-  #section-news {
-    padding: 15px;
+  #header-img {
+    max-width: 450px;
+    width: 60%;
+  }
+
+  #header-description {
+    font-size: 24px;
+  }
+
+  .article-small {
+    margin: 10px;
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    align-items: center;
+    justify-content: start;
+    flex-wrap: nowrap;
+    gap: 1rem;
+    height: 480px;
   }
 
-  .section-news-title {
-    background-color: #eee;
-    padding: 10px;
-    text-align: center;
-    width: 100%;
-    margin: 0 auto;
+  .article-small .article {
+    height: 100%;
+    width: 22%;
   }
 
-  .section-news-title h1 {
-    color: navy;
-    text-shadow: 1px 1px #444;
+  #section-news img[id*="article-img"] {
+    max-width: 200px;
+    width: 60%;
+    margin: 5px;
+    flex-shrink: 1;
   }
 
-  #section-news article.article:first-child {
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    width: 100%;
-    height: auto;
+  #section-news h2 {
+    margin: 5px;
     flex-shrink: 0;
   }
 
-  #section-news article.article {
-    display: inline-flex;
-    flex-direction: column;
-    width: 21%;
-    margin: 10px;
-    height: 492.88px;
-  }
-  #section-news article.article img[id*="article-img-"] {
-    width: 90%;
-    max-width: 260px;
-  }
-
-  #section-news article.article h2 {
-    color: white;
-    display: block;
-    margin: 10px 0;
-  }
-
-  #section-news article.article p {
-    color: #eee;
-    display: block;
-    margin: 10px;
-  }
-
-  #section-news article.article p#header-description {
-    color: #eee;
-    display: block;
-    margin: 20px 10px;
-    font-size: 22px;
-  }
-  #section-news article.article img#header-img {
-    display: block;
-    margin: 5px auto;
-    width: 80%;
-    text-align: start;
-    max-width: 400px;
+  #section-news p[id*="article-"] {
+    margin: 5px;
+    flex-shrink: 0;
   }
 }
